# kiwi-tcms-requirements

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: auto-test.sh  context-recovery.sh  notify.sh
.claude/rules/: code-quality.md  database.md  error-handling.md  frontend.md  security.md  testing.md
tcms_requirements/: __init__.py  admin.py  apps.py  checks.py  conf.py  forms.py  menu.py  middleware.py  models.py  permissions.py  rpc.py  signals.py  state_machine.py  urls.py  views.py
tcms_requirements/dashboard/: metrics.py
tcms_requirements/exports/: csv_export.py  docx_renderer.py  jira_csv_export.py  json_export.py  pdf_renderer.py  templates.py
tcms_requirements/imports/: csv_import.py
tcms_requirements/management/commands/: seed_demo_all.py  seed_demo_bugs.py  seed_demo_requirements.py
tcms_requirements/migrations/: 0001_initial.py  0002_seed_catalog.py  0003_help_text_safety.py  0004_project_management_fields.py
tcms_requirements/static/tcms_requirements/css/: requirements.css
tcms_requirements/static/tcms_requirements/js/: dashboard.js  inject.js  link_picker.js  traceability.js  traceability_export.js
tcms_requirements/templates/tcms_requirements/: _field.html  confirm_delete.html  dashboard.html  export_hub.html  get.html  import.html  link.html  list.html  mutable.html  project_confirm_delete.html  project_get.html  project_list.html  project_mutable.html  traceability.html
tcms_requirements/templatetags/: requirements_extras.py
tcms_requirements/tests/: settings.py  test_exports.py  test_project_v030.py  test_state_machine.py
tcms_requirements/traceability/: diagram.py  report.py
